WIP: improved ply-wrapper

--- a/src/examples/ply-wrapper/index.html
+++ b/src/examples/ply-wrapper/index.html
@@ -12,23 +12,29 @@
             }
             #app {
                 position: absolute;
-                left: 160px;
-                top: 100px;
-                width: 600px;
+                left: 150px;
+                top: 70px;
+                width: 750px;
                 height: 400px;
                 border: 1px solid #ccc;
             }
             #select {
                 position: absolute;
                 left: 10px;
-                top: 480px;
+                top: 460px;
+            }
+            #colorMode {
+                position: absolute;
+                width: 130px;
+                left: 10px;
+                top: 202px;
             }
             #diagram {
                 position: absolute;
                 left: 10px;
-                top: 520px;
-                width: 1210px;
-                height: 510px;
+                top: 480px;
+                width: 1705px;
+                height: 470px;
                 border: 1px solid #ccc;
             }
 
@@ -54,13 +60,17 @@
                 display: block;
             }
         </style>
+        <script>
+            var aminoAcid = 69
+            var number_of_atoms = 0;
+        </script>
         <link rel="stylesheet" type="text/css" href="app.css" />
         <script type="text/javascript" src="./index.js"></script>
         <link rel="stylesheet" type="text/css" href="/FProject5.3/style.css">
         <!--<link rel="stylesheet" type="text/css" href="/FProject5.3/dist/slimselect.css" />-->
     </head>
     <body>
-    <script>var aminoAcid = 68</script>
+
         <div id='controls'>
             <h3>Source</h3>
             <input type='text' id='plyurl' placeholder='plyurl' style='width: 400px' />
@@ -80,15 +90,15 @@
 
             function $(id) { return document.getElementById(id); }
         
-            var pdbId = '1tca', assemblyId= 'preferred';
-            var url = '/test-data/' + pdbId + '_updated.cif';
-            var format = 'cif';
+            var pdbId = 'run_0', assemblyId= 'preferred';
+            var url = '/test-data/' + pdbId + '.pdb';
+            var format = 'pdb';
 
             var plyName = 'run_0_mesh';
             var plyurl = '/test-data/' + plyName + '.ply';
 
             $('plyurl').value = plyurl;
-            $('plyurl').onchange = function (e) { url = e.target.value; }
+            $('plyurl').onchange = function (e) { plyurl = e.target.value; }
             $('url').value = url;
             $('url').onchange = function (e) { url = e.target.value; }
             $('assemblyId').value = assemblyId;
@@ -111,37 +121,39 @@
 
 
 
-            addControl('Load Asym Unit', () => PluginWrapper.load({ plyurl: plyurl, url: url, format: format }));
-            addControl('Load Assembly', () => PluginWrapper.load({ plyurl: plyurl, url: url, format: format, assemblyId: assemblyId }));
+            addControl('Load ', () => PluginWrapper.load({ plyurl: plyurl, url: url, format: format }));
+            //addControl('Load Assembly', () => PluginWrapper.load({ plyurl: plyurl, url: url, format: format, assemblyId: assemblyId }));
 
             addSeparator();
 
             addHeader('Camera');
             addControl('Toggle Spin', () => PluginWrapper.toggleSpin());
-            
             addSeparator();
+            addHeader('Color Mode');
 
-            addHeader('Animation');
+
+
+           // addHeader('Animation');
 
             // adjust this number to make the animation faster or slower
             // requires to "restart" the animation if changed
-            PluginWrapper.animate.modelIndex.maxFPS = 30;
+            // PluginWrapper.animate.modelIndex.maxFPS = 30;
 
-            addControl('Play To End', () => PluginWrapper.animate.modelIndex.onceForward());
-            addControl('Play To Start', () => PluginWrapper.animate.modelIndex.onceBackward());
-            addControl('Play Palindrome', () => PluginWrapper.animate.modelIndex.palindrome());
-            addControl('Play Loop', () => PluginWrapper.animate.modelIndex.loop());
-            addControl('Stop', () => PluginWrapper.animate.modelIndex.stop());
+            //addControl('Play To End', () => PluginWrapper.animate.modelIndex.onceForward());
+            //addControl('Play To Start', () => PluginWrapper.animate.modelIndex.onceBackward());
+            //addControl('Play Palindrome', () => PluginWrapper.animate.modelIndex.palindrome());
+            //addControl('Play Loop', () => PluginWrapper.animate.modelIndex.loop());
+            //addControl('Stop', () => PluginWrapper.animate.modelIndex.stop());
 
-            addSeparator();
-            addHeader('Misc');
+            //addSeparator();
+            //addHeader('Misc');
 
-            addControl('Apply Evo Cons', () => PluginWrapper.coloring.evolutionaryConservation());
-            addControl('Default Visuals', () => PluginWrapper.updateStyle());
+            //addControl('Apply Evo Cons', () => PluginWrapper.coloring.evolutionaryConservation());
+            //addControl('Default Visuals', () => PluginWrapper.updateStyle());
 
-            addSeparator();
-            addHeader('State');
-
+            //addSeparator();
+            //addHeader('State');
+            /*
             var snapshot;
             addControl('Create Snapshot', () => {
                 snapshot = PluginWrapper.snapshot.get();
@@ -154,7 +166,7 @@
                 // or download snapshot using fetch or ajax or whatever
                 // or PluginWrapper.snapshot.download(url);
             });
-
+            */
             ////////////////////////////////////////////////////////
 
             function addControl(label, action) {
@@ -174,8 +186,17 @@
                 h.innerText = header;
                 $('controls').appendChild(h);
             }
-    PluginWrapper.klick;
+        PluginWrapper.click;
         </script>
+        <select id='colorMode'>
+            <option value='element' selected>element</option>
+            <option value='contactcount'>contactcount</option>
+            <option value='contactsteps'>contactsteps</option>
+            <option value='hbounds'>hbounds</option>
+            <option value='hboundsteps'>hboundsteps</option>
+            <option value='spots'>spots</option>
+            <option value='rmsf'>rmsf</option>
+        </select>
 
         <!-- --------- FProject start --------- -->
         <select id="select" onchange="iniciar()">
@@ -205,6 +226,7 @@
         -->
 
         <!-- load the d3.js library -->
+
         <script src="/FProject5.3/d3.v4.min.js"></script>
         <script src="/FProject5.3/jquery-3.3.1.min.js"></script>
         <script src="https://d3js.org/d3-path.v1.min.js"></script>
